# Letterboxd-Discord-Bot

./: .dockerignore  .gitignore  Dockerfile  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  compose.yaml  config.py  helper.py  main.py  pyproject.toml  scraping.py
